Release 0.4.0_M2
Signed-off-by: Steve Harmon <stephen.harmon@thingworx.com>